Fixed bug in author_detail

--- a/cyclope/templates/cyclope/author_detail.html
+++ b/cyclope/templates/cyclope/author_detail.html
@@ -16,7 +16,7 @@
 
   {% if current_object.image %}
   <div class="media-content">
-    <img src="{% version media.image.path 'croppedthumbnail' %}" />
+    <img src="{% version current_object.image.path 'croppedthumbnail' %}" />
   </div>
   {% endif %}
 
