--- a/cyclope/templates/cyclope/author_detail.html
+++ b/cyclope/templates/cyclope/author_detail.html
@@ -3,8 +3,14 @@
 {% load i18n fb_versions cyclope_utils dbgettext_tags %}
 
 {% block content %}
-<div class="content-view author detail author-detail">
+<div class="content-view authors detail authors-detail">
   <h1 class="title">{{ current_object.name }}</h1>
+
+  {% if current_object.image %}
+  <div class="media-content">
+    <img src="{% version current_object.image.path 'croppedthumbnail' %}" />
+  </div>
+  {% endif %}
 
   {% if current_object.origin %}
   <div class="origin">{{ current_object.origin }}</div>
@@ -14,12 +20,8 @@
   <div class="notes">{{ current_object.notes|smart_style }}</div>
   {% endif %}
 
-  {% if current_object.image %}
-  <div class="media-content">
-    <img src="{% version current_object.image.path 'croppedthumbnail' %}" />
-  </div>
-  {% endif %}
+</div>
 
   {% include "cyclope/authored_content_block.html" %}
-</div>
+
 {% endblock content%}
