--- a/cyclope/media/themes/neutronix/css/cyclope.less
+++ b/cyclope/media/themes/neutronix/css/cyclope.less
@@ -2611,7 +2611,7 @@ LOVE
   font-weight:700;
   margin:10px 0 0;
   color:@colord;
-  padding:0 0 0 10px;}
+  padding:0;}
 
 #love .teaser {
   margin:0 0 10px;
@@ -3104,6 +3104,18 @@ LOVE
   width:25px;
   height:25px;
   background:url(../images/css/btn.png) no-repeat;}
+
+.authors {display:block;overflow:auto;margin:0 0 20px;}
+.authors_category_title {font-size:1.2em;font-weight:700;margin:10px 0; background: @colora; padding: 6px;}
+.authors .title {font-size:.95em !important;
+    margin:0 0 10px !important;padding:4px;border-top:1px solid @colorb !important;border-bottom:1px solid @colorb !important;}
+.authors .origin {font-size:.8em;font-style:italic;}
+.authors .notes {font-size:.9em;}
+.authors .notes a {color:@color-omega;font-weight:400;}
+.authors .link {font-size:.75em;font-weight:400;margin:10px 0;}
+.authors .link a {color:@color-alpha;background:@color-omega;padding:4px;}
+.authors .media-content{float:left;width:90px;}
+.authors .media-content img {width:80px;}
 
 /*------------------
 JCAROUSEL
